plugins {
    id 'java'
}
apply plugin: 'maven-publish'

sourceCompatibility = 11

task mainJar(type: Jar) {
    from sourceSets.main.output
}

task sourceJar(type: Jar) {
    from sourceSets.main.java
}

artifacts {
    archives mainJar, sourceJar
}

publishing {
    publications {
        MyPublication(MavenPublication) {
            artifactId 'jb-jdi'
            groupId 'org.jetbrains.intellij.deps'
            version '2.18'
            artifact mainJar
            artifact sourceJar {
                classifier "sources"
            }
        }
    }
    repositories {
        maven {
            url "https://packages.jetbrains.team/maven/p/ij/intellij-dependencies"
            credentials {
                username = System.getenv('INTELLIJ_DEPENDENCIES_BOT')
                password = System.getenv('INTELLIJ_DEPENDENCIES_TOKEN')
            }
        }
    }
}
